fix(menu): add z-index on menu open

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -9,7 +9,8 @@
     flex-direction: column;
     padding: 2rem;
     transition: .3s ease;
-    
+    z-index: 999;
+
     button {
         background: none;
         outline: none;
